[gd_scene load_steps=6 format=2]

[ext_resource path="res://Font/DynamicFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Font/DynamicFontSmaller.tres" type="DynamicFont" id=2]
[ext_resource path="res://Script/StageSelectMenu.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="stageSelectPopup" type="Popup"]
anchor_right = 0.833
anchor_bottom = 0.312
margin_right = 0.239929
margin_bottom = 0.639984
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.278431, 0.572549, 0.67451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -274.56
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StageSelectHeaderContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 599.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_styles/panel = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/StageSelectHeaderContainer"]
margin_right = 599.0
margin_bottom = 100.0
color = Color( 0.368627, 0.521569, 0.619608, 1 )

[node name="StageSelectText" type="Label" parent="VBoxContainer/StageSelectHeaderContainer"]
margin_top = 16.0
margin_right = 599.0
margin_bottom = 83.0
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="StageSelectHighscoreText" type="PanelContainer" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 599.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 200 )
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/StageSelectHighscoreText"]
margin_right = 599.0
margin_bottom = 200.0
custom_constants/margin_top = -80
custom_constants/margin_left = 20

[node name="HighScoreText" type="Label" parent="VBoxContainer/StageSelectHighscoreText/MarginContainer"]
margin_left = 20.0
margin_top = 32.0
margin_right = 599.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 2 )

[node name="StageSelectButtonContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 300.0
margin_right = 599.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 100 )
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/StageSelectButtonContainer"]
margin_right = 599.0
margin_bottom = 100.0
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/StageSelectButtonContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 599.0
margin_bottom = 100.0
custom_constants/separation = 240

[node name="BtnMain" type="Button" parent="VBoxContainer/StageSelectButtonContainer/MarginContainer/HBoxContainer"]
margin_right = 170.0
margin_bottom = 80.0
rect_min_size = Vector2( 170, 80 )
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
text = "Main"

[node name="BtnKembali" type="Button" parent="VBoxContainer/StageSelectButtonContainer/MarginContainer/HBoxContainer"]
margin_left = 410.0
margin_right = 580.0
margin_bottom = 80.0
rect_min_size = Vector2( 170, 80 )
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
text = "Kembali"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/StageSelectButtonContainer/MarginContainer/HBoxContainer/BtnMain" to="." method="_on_BtnMain_pressed"]
[connection signal="pressed" from="VBoxContainer/StageSelectButtonContainer/MarginContainer/HBoxContainer/BtnKembali" to="." method="_on_BtnKembali_pressed"]
